# String-matching

./: AhoCorasick.cpp  BoyerMoore.cpp  BruteForce.cpp  CMakeLists.txt  Function.h  KMP.cpp  Rabin-Karp.vcxproj  Rabin-Karp.vcxproj.filters  RabinKarp.cpp  aho.cpp  bm.cpp  crossward  function.hpp  gen-test.cpp  kmp.cpp  main.cpp  naive.cpp  puzzle.txt  solution.txt  test_s1_10.txt  test_s1_100.txt  test_s1_1000.txt  test_s1_500.txt  test_s2_k10.txt  test_s2_k100.txt  test_s2_k50.txt
notebooks/: ActionMesh.ipynb
x64/Debug/: Rabin-Karp.exe.recipe  Rabin-Karp.ilk  main.exe.recipe  main.ilk  vc143.idb
x64/Debug/Rabin-Karp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  main.lastbuildstate
